# clinic_api

./: CMakeLists.txt  HistoryQuery.cpp  HistoryQuery.h  PatientQuery.cpp  PatientQuery.h  PositionQuery.cpp  PositionQuery.h  README.md  SessionQuery.cpp  SessionQuery.h  SpecialistQuery.cpp  SpecialistQuery.h  SpecializationQuery.cpp  SpecializationQuery.h  SurveyQuery.cpp  SurveyQuery.h  TimetableQuery.cpp  TimetableQuery.h  api.txt  clinic.cpp  clinic.h  config.js  dbQuery.cpp  dbQuery.h  main.cpp
